--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Exercise 2</title>
-</head>
-<body>
-    <center>
-        <h1>Kalkulator</h1>
-    </center>
-</body>
+    <head>
+        <!--required meta tags-->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.5">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!--Boostrap CSS-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family= Helvetica & display=swap ">
+        <link rel="stylesheet" href="style.css">
+
+        <title>Exercise 2</title>
+    </head>
+    <body>
+
+        <div class="container-fluid bg-warna shadow-bottom" id="header">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center pt-3 pb-3">
+                    <h1 class="text-black">KALKULATOR</h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-3">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 m-auto">
+                    <div class="card-panel shadow-sm card-height">
+                        <form action="" name="formCalculator">
+                            <table class="table text-center">
+                                <tbody>
+                                    <tr>
+                                        <td colspan="4">
+                                            <input type="text" name="result" class="form-control" disabled>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td><input type="button" value="7" class="btn btn-secondary" onclick="calculator('7')"></td>
+                                        <td><input type="button" value="8" class="btn btn-secondary" onclick="calculator('8')"></td>
+                                        <td><input type="button" value="9" class="btn btn-secondary" onclick="calculator('9')"></td>
+                                        <td><input type="button" value="*" class= "btn bg-warna text-black" onclick="calculator('*')"></td>
+                                    </tr>
+
+                                    <tr>
+                                        <td><input type="button" value="4" class="btn btn-secondary" onclick="calculator('4')"></td>
+                                        <td><input type="button" value="5" class="btn btn-secondary" onclick="calculator('5')"></td>
+                                        <td><input type="button" value="6" class="btn btn-secondary" onclick="calculator('6')"></td>
+                                        <td><input type="button" value="-" class= "btn bg-warna text-black" onclick="calculator('-')"></td>
+                                    </tr>
+
+                                    <tr>
+                                        <td><input type="button" value="1" class="btn btn-secondary" onclick="calculator('1')"></td>
+                                        <td><input type="button" value="2" class="btn btn-secondary" onclick="calculator('2')"></td>
+                                        <td><input type="button" value="3" class="btn btn-secondary" onclick="calculator('3')"></td>
+                                        <td><input type="button" value="+" class= "btn bg-warna text-black" onclick="calculator('+')"></td>
+                                    </tr>
+
+                                    <tr>
+                                        <td><input type="button" value="0" class="btn btn-secondary" onclick="calculator('0')"></td>
+                                        <td><input type="button" value="c" class="btn btn-success" onclick="calculator('c')"></td>
+                                        <td><input type="button" value="/" class= "btn bg-warna text-black" onclick="calculator('/')"></td>
+                                        <td><input type="button" value="=" class= "btn bg-warna text-black" onclick="calculator('=')"></td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="calculator.js"></script>
+
+    </body>
 </html>
